custom-apps/adguardhome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-deployment
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
        - name: adguard-conf
          mountPath: /opt/adguardhome/conf
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-pvc-config
      - name: adguard-conf
        persistentVolumeClaim:
          claimName: adguard-pvc-conf
