custom-apps/adguardhome/service-http.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-http
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: http-initial
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
